# qapulsesk-healer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly-integration.yml
examples/: selenium_demo.py  skakarh_demo.py  skakarh_playwright_demo.py  skakarh_selenium_demo.py
src/qapulsesk_healer/: __init__.py  candidates.py  core.py  llm.py  pytest_plugin.py  strategies.py
src/qapulsesk_healer/adapters/: __init__.py  appium.py  cypress.py  playwright.py  selenium.py
src/qapulsesk_healer/llm/: __init__.py  anthropic.py  base.py  gemini.py
src/qapulsesk_healer/snapshots/: __init__.py  base.py  mobile.py  web.py
tests/: test_candidates.py  test_core.py  test_llm.py  test_llm_providers.py  test_retry.py  test_snapshots.py  test_strategies.py
tests/adapters/: test_playwright.py  test_selenium.py
tests/integration/: test_skakarh_healing.py
