[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qapulsesk-healer"
version = "0.1.0"
description = "Self-healing locators for Selenium, Cypress, Playwright & Appium. When a locator breaks, an LLM proposes ranked replacements from the live DOM/XML source."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Shahnawaz Kakarh", email = "hello@skakarh.com" },
]
keywords = [
    "selenium",
    "playwright",
    "cypress",
    "appium",
    "test-automation",
    "self-healing",
    "ai",
    "llm",
    "sdet",
    "qa",
    "qapulse",
    "mobile-testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
selenium = ["selenium>=4.20.0"]
playwright = ["playwright>=1.45.0"]
appium = ["Appium-Python-Client>=4.0.0", "selenium>=4.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-beautifulsoup4",
]
all = [
    "qapulsesk-healer[selenium,playwright,appium,dev]",
]

[project.urls]
Homepage = "https://skakarh.com"
Repository = "https://github.com/QAPulse-by-SK/qapulsesk-healer"
Issues = "https://github.com/QAPulse-by-SK/qapulsesk-healer/issues"
"QAPulse by SK" = "https://skakarh.com"

[project.entry-points.pytest11]
qapulsesk_healer = "qapulsesk_healer.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/qapulsesk_healer"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests that hit a real LLM (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/qapulsesk_healer"]

[[tool.mypy.overrides]]
module = ["selenium.*", "playwright.*", "appium.*"]
ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["qapulsesk_healer"]
branch = true
parallel = false
disable_warnings = ["module-not-measured"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
